testdata/baselines/reference/submodule/conformance/checkJsdocOnEndOfFile.errors.txt
error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
eof.js(2,20): error TS2304: Cannot find name 'bad'.


!!! error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
==== eof.js (1 errors) ====
    /**
     * @typedef {Array<bad>} Should have error here
                       ~~~
!!! error TS2304: Cannot find name 'bad'.
     */
    